--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <section class="lead">
       <h1 class="lead__title">Путешествия по России</h1>
       <p class="lead__subtitle">Настоящая страна не в выпусках новостей, а здесь.</p>
-      <img src="images/lead-polka.jpg" alt="" class="lead__image">
+      <img src="images/lead-polka.jpg" alt="иллюстрация заголовка" class="lead__image">
       <p class="lead__caption">ваша полка — верхняя</p>
     </section>
     <section class="intro">
@@ -45,23 +45,23 @@
       </ul>
     </section>
     <section class="photo-grid">
-      <img src="images/photo-grid-train.jpg" alt="" class="photo-grid__item">
-      <img src="images/photo-grid-atharva-tulsi.jpg" alt="" class="photo-grid__item">
-      <img src="images/photo-grid-tuman.jpg" alt="" class="photo-grid__item">
-      <img src="images/photo-grid-sochi.jpg" alt="" class="photo-grid__item">
-      <img src="images/photo-grid-arisa.jpg" alt="" class="photo-grid__item">
-      <img src="images/photo-grid-baikal.jpg" alt="" class="photo-grid__item">
-      <img src="images/photo-grid-elbrus.jpg" alt="" class="photo-grid__item">
-      <img src="images/photo-grid-kondratiev.jpg" alt="" class="photo-grid__item">
-      <img src="images/photo-grid-kamchatka-1.jpg" alt="" class="photo-grid__item">
-      <img src="images/photo-grid-kamchatka-2.jpg" alt="" class="photo-grid__item">
-      <img src="images/photo-grid-baikal-2.jpg" alt="" class="photo-grid__item">
-      <img src="images/photo-grid-ergaki.jpg" alt="" class="photo-grid__item">
+      <img src="images/photo-grid-train.jpg" alt="иллюстрация пейзажа" class="photo-grid__item">
+      <img src="images/photo-grid-atharva-tulsi.jpg" alt="иллюстрация пейзажа" class="photo-grid__item">
+      <img src="images/photo-grid-tuman.jpg" alt="иллюстрация пейзажа" class="photo-grid__item">
+      <img src="images/photo-grid-sochi.jpg" alt="иллюстрация пейзажа" class="photo-grid__item">
+      <img src="images/photo-grid-arisa.jpg" alt="иллюстрация пейзажа" class="photo-grid__item">
+      <img src="images/photo-grid-baikal.jpg" alt="иллюстрация пейзажа" class="photo-grid__item">
+      <img src="images/photo-grid-elbrus.jpg" alt="иллюстрация пейзажа" class="photo-grid__item">
+      <img src="images/photo-grid-kondratiev.jpg" alt="иллюстрация пейзажа" class="photo-grid__item">
+      <img src="images/photo-grid-kamchatka-1.jpg" alt="иллюстрация пейзажа" class="photo-grid__item">
+      <img src="images/photo-grid-kamchatka-2.jpg" alt="иллюстрация пейзажа" class="photo-grid__item">
+      <img src="images/photo-grid-baikal-2.jpg" alt="иллюстрация пейзажа" class="photo-grid__item">
+      <img src="images/photo-grid-ergaki.jpg" alt="иллюстрация пейзажа" class="photo-grid__item">
     </section>
     <section class="places">
       <div class="place">
         <h3 class="place__title">Куршская коса</h3>
-        <img src="images/place-kosa.jpg" alt="" class="place__image">
+        <img src="images/place-kosa.jpg" alt="иллюстрация пейзажа: Куршская коса" class="place__image">
         <div class="place__website">
           <p class="place__url-heading">URL</p>
           <a href="http://park-kosa.ru" class="place__link link">park-kosa.ru</a>
@@ -73,7 +73,7 @@
       </div>
       <div class="place">
         <h3 class="place__title">Кольский</h3>
-        <img src="images/place-kolsky.jpg" alt="" class="place__image">
+        <img src="images/place-kolsky.jpg" alt="иллюстрация пейзажа: Кольский" class="place__image">
         <div class="place__website">
           <p class="place__url-heading">URL</p>
           <a href="https://yourshot.nationalgeographic.com/photos/?keywords=kolskiy" class="place__link link">National Geographic</a>
@@ -85,7 +85,7 @@
       </div>
       <div class="place">
         <h3 class="place__title">Алтай</h3>
-        <img src="images/place-altai.jpg" alt="" class="place__image">
+        <img src="images/place-altai.jpg" alt="иллюстрация пейзажа: Алтай" class="place__image">
         <div class="place__website">
           <p class="place__url-heading">URL</p>
           <a href="https://www.facebook.com/vera.bashmakova/posts/10156011613718822" class="place__link link">Facebook</a>
@@ -97,7 +97,7 @@
       </div>
       <div class="place">
         <h3 class="place__title">Зимний Байкал</h3>
-        <img src="images/place-winter-baikal.jpg" alt="" class="place__image">
+        <img src="images/place-winter-baikal.jpg" alt="иллюстрация пейзажа: Зимний Байкал" class="place__image">
         <div class="place__website">
           <p class="place__url-heading">URL</p>
           <a href="https://vk.com/baikalmile" class="place__link link">https://vk.com/baikalmile</a>
@@ -109,7 +109,7 @@
       </div>
       <div class="place">
         <h3 class="place__title">Карелия</h3>
-        <img src="images/place-karelia.jpg" alt="" class="place__image">
+        <img src="images/place-karelia.jpg" alt="иллюстрация пейзажа: Карелия" class="place__image">
         <div class="place__website">
           <p class="place__url-heading">URL</p>
           <a href="http://vodlozero.ru" class="place__link link">http://vodlozero.ru/</a>
@@ -123,7 +123,7 @@
       <a href="https://stampsy.com/na-elektrichkakh-do-baikala" class="cover__link">
       <h3 class="cover__title">До Байкала «на собаках»</h3>
       <p class="cover__subtitle">По мотивам учебной темы о Транссибе и iframes — путешествие от столицы до Байкала на электричках.</p>
-      <img src="images/cover-trains.jpg" alt="" class="cover__background">
+      <img src="images/cover-trains.jpg" alt="картинка-ссылка" class="cover__background">
       </a>
     </section>
     <footer class="footer">
